--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="/scripts/main.js"></script>
 </body>
 
 </html>
